k8s/05-scraper-deployment.yaml
# Deployment – Python Scraper

apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper
  namespace: tradingmk
  labels:
    app: scraper
    app.kubernetes.io/part-of: tradingmk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
        - name: scraper
          image: davor10/tradingmk-scraper:sha-2b8029d
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
