k8s/03-backend-deployment.yaml
# Deployment – Spring Boot Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tradingmk
  labels:
    app: backend
    app.kubernetes.io/part-of: tradingmk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  # Rolling update
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      # Wait for postgres to be available before scheduling
      containers:
        - name: backend
          image: davor10/tradingmk-backend:sha-6604c30
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "1500m"
              memory: "1Gi"
          # readinessProbe:
          #   httpGet:
          #     path: /actuator/health/readiness
          #     port: http
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 5
          # livenessProbe:
          #   httpGet:
          #     path: /actuator/health/liveness
          #     port: http
          #   initialDelaySeconds: 60
          #   periodSeconds: 20
          #   timeoutSeconds: 5
          #   failureThreshold: 3

---
# Service – Backend

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: tradingmk
  labels:
    app: backend
    app.kubernetes.io/part-of: tradingmk
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
