k8s/04-frontend-deployment.yaml
# Deployment – React Frontend (served by Nginx)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: tradingmk
  labels:
    app: frontend
    app.kubernetes.io/part-of: tradingmk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: davor10/tradingmk-frontend:sha-2b8029d
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20

---
# Service – Frontend

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: tradingmk
  labels:
    app: frontend
    app.kubernetes.io/part-of: tradingmk
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
